[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scripts/Spaceship.gd" type="Script" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]
[ext_resource path="res://LaserSpawner.tscn" type="PackedScene" id=3]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 30, 30 )

[node name="Spaceship" type="KinematicBody2D"]

input_pickable = false
collision_layer = 1
collision_mask = 1
collision/safe_margin = 0.08
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="." index="0"]

texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="." index="1"]

shape = SubResource( 1 )

[node name="LaserSpawner" parent="." index="2" instance=ExtResource( 3 )]

[node name="canShootTimer" type="Timer" parent="." index="3"]

process_mode = 1
wait_time = 0.3
one_shot = true
autostart = false

[connection signal="timeout" from="canShootTimer" to="." method="_on_canShootTimer_timeout"]


